syntax = "proto3";

package pb;

import "google/api/annotations.proto";

// The Add service definition.
service Add {
    // create 更新报警记录
    rpc Create (CreateRequest) returns (CreateReply){}

    rpc Add (AddRequest) returns (AddReply){}

    rpc End (EndRequest) returns (EndReply){}

}

message CreateRequest {
    string ID = 1;
    uint32 FlowID = 2;
    string Source = 3;
    string Type = 4;
    string Strategy = 5;
    string Target = 6;
    string SourceID = 7;
}

message CreateReply {
    string v = 1;
    string err = 2;
}

message AddRequest {
    string ID = 1;
    uint32 FlowID = 2;
    string Source = 3;
    string Type = 4;
    string Strategy = 5;
    string Target = 6;
    string SourceID = 7;
}

message AddReply {
    string v = 1;
    string err = 2;
}

message EndRequest {
    string ID = 1;
    uint32 FlowID = 2;
    string Source = 3;
    string Type = 4;
    string Strategy = 5;
    string Target = 6;
    string SourceID = 7;
}

message EndReply{
    string v = 1;
    string err = 2;
}